--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "tiny-csrf": "^1.1.3"
   }
 }
